--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,7 +7,6 @@
     <title>AirBnB_clone</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
 </head>
 
 <body style="margin: 0; padding: 0">
@@ -29,7 +28,6 @@
         </footer>
     </div>
 
-    <script src="" async defer></script>
 </body>
 
 </html>
