made more w3c fixes

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -25,9 +25,9 @@
             </nav>
         </header>
         <!-- body contents -->
-        <section>
+        <div>
 
-        </section>
+        </div>
 
         <!-- page footer -->
         <footer>
