--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -7,9 +7,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/4-common.css">
-        <link rel="stylesheet" href="styles/4-header.css">
-        <link rel="stylesheet" href="styles/4-footer.css">
-        <link rel="stylesheet" href="styles/4-filters.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/5-filters.css">
         <link rel="icon"
             href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png"
             type="image/x-icon">
@@ -29,13 +29,23 @@
         <!-- body contents- main container -->
         <div class="container">
             <section class="filters">
+                <!-- start of filters -->
                 <button type="search" placeholder="search">
                     <i class="fa fa-search">
 
                     </i>
                     search
                 </button>
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>lorem ipsum dolor</h4>
 
+                </div>
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>lorem ipsum dolor</h4>
+                </div>
+                <!-- filters ends here -->
             </section>
             <!-- container ends here -->
         </div>
